# magnet_control

./: package.xml  setup.cfg  setup.py
config/: magnet_params.yaml
install/: local_setup.sh  setup.sh
install/magnet_control/lib/magnet_control/: ros2client  ros2server
install/magnet_control/share/magnet_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
magnet_control/: ros2server.py
