<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>magnet_control</name>
  <version>0.0.0</version>
  <description>A ROS2 package for controlling magnets via a client-server architecture</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT License</license> <!-- Update this according to your license -->

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_srvs</depend>

  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

